[package]
name = "zGuardian"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Performance", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug"] }